...
    "BopQuest word found!" : {

    },
    "BopQuest Words Found" : {

    },
    "Brazilian Portuguese" : {
      "comment" : "Bubble Language name",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Limpo. 15 segundos adicionados."
          }
        }
      }
    },
    "Close" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
...
            "state" : "translated",
            "value" : "Número da coluna, letra da linha"
          }
        }
      }
    },
    "Column Number, Row Number" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spaltennummer, Zeilennummer"
...
            "state" : "translated",
            "value" : "Encerrar jogo"
          }
        }
      }
    },
    "End Game" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spiel beenden"
...
            "state" : "translated",
            "value" : "Encerrar jogo"
          }
        }
      }
    },
    "English" : {
      "comment" : "Bubble Language name",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
    "Game Options" : {

    },
    "Game Paused" : {

    },
    "Game Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spieleinstellungen"
...
            "state" : "translated",
            "value" : "Forme o máximo de palavras que puder em 2 minutos! As letras mudam conforme você as usa."
          }
        }
      }
    },
    "Make Word" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wort bilden"
...
        }
      }
    },
    "Resume Game" : {

    },
    "Return Home" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück zum Start"
...
            "state" : "translated",
            "value" : "Voltar ao início"
          }
        }
      }
    },
    "Round Complete" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Runde abgeschlossen"
...
            "state" : "translated",
            "value" : "Espanhol"
          }
        }
      }
    },
    "Speak Letter Phonetics" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buchstaben-Phonetik ansagen"
...
            "state" : "translated",
            "value" : "Comece a bopar!"
          }
        }
      }
    },
    "Start Game" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spiel starten"
...
